@@ -1,9 +1,10 @@
-\name{NSeff}
+\name{NSE}
 \Rdversion{1.1}
+\alias{NSE}
 \alias{NSeff}
-\alias{NSeff.default}
-\alias{NSeff.matrix}
-\alias{NSeff.data.frame}
+\alias{NSE.default}
+\alias{NSE.matrix}
+\alias{NSE.data.frame}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
 Nash-Sutcliffe Efficiency
@@ -12,13 +13,13 @@ Nash-Sutcliffe Efficiency
 Nash-Sutcliffe efficiency between \code{sim} and \code{obs}, with treatment of missing values.
 }
 \usage{
-NSeff(sim, obs, ...)
+NSE(sim, obs, ...)
 
-\method{NSeff}{default}(sim, obs, na.rm=TRUE, ...)
+\method{NSE}{default}(sim, obs, na.rm=TRUE, ...)
 
-\method{NSeff}{data.frame}(sim, obs, na.rm=TRUE, ...)
+\method{NSE}{data.frame}(sim, obs, na.rm=TRUE, ...)
 
-\method{NSeff}{matrix}(sim, obs, na.rm=TRUE, ...)
+\method{NSE}{matrix}(sim, obs, na.rm=TRUE, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -37,17 +38,17 @@ further arguments passed to or from other methods.
 }
 }
 \details{
-\deqn{ NSeff = 1 -\frac { \sum_{i=1}^N { \left( S_i - O_i \right)^2 } } { \sum_{i=1}^N { \left( O_i - \bar{O} \right)^2 } }  }{%
-NSeff = 1 - ( sum( (obs - sim)^2 ) / sum( (obs - mean(obs))^2 ) }
+\deqn{ NSE = 1 -\frac { \sum_{i=1}^N { \left( S_i - O_i \right)^2 } } { \sum_{i=1}^N { \left( O_i - \bar{O} \right)^2 } }  }{%
+NSE = 1 - ( sum( (obs - sim)^2 ) / sum( (obs - mean(obs))^2 ) }
 
-The Nash-Sutcliffe efficiency (NSeff) is a normalized statistic that determines the relative magnitude of the residual variance ("noise") compared to the measured data variance ("information") (Nash and Sutcliffe, 1970). \cr
+The Nash-Sutcliffe efficiency (NSE) is a normalized statistic that determines the relative magnitude of the residual variance ("noise") compared to the measured data variance ("information") (Nash and Sutcliffe, 1970). \cr
 
-NSeff indicates how well the plot of observed versus simulated data fits the 1:1 line.\cr
+NSE indicates how well the plot of observed versus simulated data fits the 1:1 line.\cr
 
 Nash-Sutcliffe efficiencies range from -Inf to 1. Essentially, the closer to 1, the more accurate the model is. \cr
--) NSeff = 1, corresponds to a perfect match of modelled to the observed data. \cr
--) NSeff = 0, indicates that the model predictions are as accurate as the mean of the observed data, \cr
--) -Inf < NSeff < 0, indicates that the observed mean is better predictor than the model.
+-) NSE = 1, corresponds to a perfect match of modelled to the observed data. \cr
+-) NSE = 0, indicates that the model predictions are as accurate as the mean of the observed data, \cr
+-) -Inf < NSE < 0, indicates that the observed mean is better predictor than the model.
 }
 \value{
 Nash-Sutcliffe efficiency between \code{sim} and \code{obs}. \cr
@@ -71,16 +72,16 @@ The missing values in \code{obs} and \code{sim} are removed before the computati
 %% ~Make other sections like Warning with \section{Warning }{....} ~
 
 \seealso{
-\code{\link{mNSeff}}, \code{\link{rNSeff}}
+\code{\link{mNSE}}, \code{\link{rNSE}}
 }
 \examples{
 obs <- 1:10
 sim <- 1:10
-NSeff(sim, obs)
+NSE(sim, obs)
 
 obs <- 1:10
 sim <- 2:11
-NSeff(sim, obs)
+NSE(sim, obs)
 
 ##################
 # Loading daily streamflows of the Ega River (Spain), from 1961 to 1970
@@ -91,15 +92,15 @@ obs <- EgaEnEstellaQts
 # Generating a simulated daily time series, initially equal to the observed series
 sim <- obs 
 
-# Computing the 'NSeff' for the "best" (unattainable) case
-NSeff(sim=sim, obs=obs)
+# Computing the 'NSE' for the "best" (unattainable) case
+NSE(sim=sim, obs=obs)
 
 # Randomly changing the first 2000 elements of 'sim', by using a normal distribution 
 # with mean 10 and standard deviation equal to 1 (default of 'rnorm').
 sim[1:2000] <- obs[1:2000] + rnorm(2000, mean=10)
 
-# Computing the new 'NSeff'
-NSeff(sim=sim, obs=obs)
+# Computing the new 'NSE'
+NSE(sim=sim, obs=obs)
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
